# comfyui-weirdion

./: .env.example  .gitignore  DEVELOPMENT.md  Makefile  README.md  __init__.py  pyproject.toml  requirements.txt
.config/: profiles.default.json
docs/adr/: adr-0001-node-naming-and-ui.md  adr-0002-checkpoint-loading-and-clip-skip.md  adr-0003-docs-and-assets.md  adr-0004-profile-manager-and-profiles.md
scripts/: export_requirements.py
src/weirdion/: __init__.py
src/weirdion/core/: __init__.py  base.py  registry.py
src/weirdion/nodes/: __init__.py
src/weirdion/nodes/loaders/: __init__.py  load_checkpoint.py  load_checkpoint_with_clip_skip.py  load_checkpoint_with_profiles.py  load_profile_input_parameters.py
src/weirdion/nodes/processors/: __init__.py
src/weirdion/nodes/prompting/: __init__.py  prompt_with_embedding.py  prompt_with_lora.py
src/weirdion/nodes/utilities/: __init__.py  text_combine.py
src/weirdion/server/: __init__.py  profile_routes.py
src/weirdion/types/: __init__.py  comfy_types.py
src/weirdion/utils/: __init__.py  checkpoint_loader.py  lora_parser.py  profile_store.py
tests/: conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_load_checkpoint.py  test_load_checkpoint_with_clip_skip.py  test_load_checkpoint_with_profiles.py  test_load_profile_input_parameters.py  test_lora_parser.py  test_nodes.py  test_prompt_with_embedding.py  test_prompt_with_lora.py  test_registry.py
web/: weirdion_profile_manager.css  weirdion_profile_manager.js  weirdion_prompt_with_embedding.js  weirdion_prompt_with_lora.js
